Note that sys/vm can cause double-free panics too if invariants are enabled
This documents PR # 192098 to some degree

Sponsored-by: EMC / Isilon Storage Division

--- a/testing/memguard/README
+++ b/testing/memguard/README
@@ -19,6 +19,8 @@ Knobs that can be used to validate the functionality are:
 - vm.memguard.numalloc
 
 Notes:
-- Double-frees cause memguard panics. XXX: how will I test this without RUMP or a VM?
+- Double-frees cause memguard || sys/vm panics if invariants are enabled
+  (see PR # 192098 for relevant discussion). XXX: how will I test this without
+  RUMP or a VM?
 
 
