--- a/testing/atf-c-driver-example/README
+++ b/testing/atf-c-driver-example/README
@@ -1,8 +1,9 @@
 The purpose of this example is to demonstrate how one could write a "C" driver
 for interfacing with a library that is in turn driven by an atf-sh script for
-graybox testing purposes. The goal is to demonstrate how it could be simpler to
-write a shell script for testing instead of a C application when doing trivial
-testing tasks
+graybox testing purposes and to demonstrate how it could be simpler to write a
+shell script for testing instead of a C/C++ application when doing trivial
+testing tasks like this. Caveat being of course that sh is a loosely typed
+language and C/C++ are strong typed languages.
 
 Building the example:
 
